--- a/Index.html
+++ b/Index.html
@@ -2,20 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate">
-  <meta http-equiv="pragma" content="no-cache">
-  <meta http-equiv="expires" content="0">
-  <title>AIS | Ahmedabad International School</title>
-    <link rel="icon" href="https://www.aischool.net/favicon.png">
+    <title>AIS TM Scheduler</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        .embed-container {
+            position: relative;
+            padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+            height: 0;
+            overflow: hidden;
+            max-width: 100%; /* Optional: Adjusts to the width of the container */
+        }
+
+        .embed-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: none; /* Removes iframe border */
+        }
+    </style>
 </head>
 <body>
-  <iframe style=" position: absolute;  top: 0;  left: 0;  bottom: 0;  right: 0;  width: 100%;  height: 100%;" 
-          src="https://script.google.com/a/macros/aischool.net/s/AKfycbzonAds6_bYZ6ccj1kAtlmbPz4vS8HXkXS_54y3g-ZSBka3PrKI-Gad0UwsJJNNIdJ1/exec" frameborder="0" scrolling="no"   />
-   
-   <script> 
-       window.onload=window.location.reload();
-    </script>
+    <div class="container mt-4">
+       
+        <div class="embed-container">
+            <iframe src="https://script.google.com/macros/s/AKfycbwYt-NGhsAeb1uTSc_zmX87LQJkEizj8_IFJwMiNOfn37DClQ9qzfxq4qrGup1yAseI/exec" allowfullscreen></iframe>
+        </div>
+        <div class="alert alert-info text-center mt-3">
+            All fields marked with <strong>*</strong> are mandatory.
+        </div>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
